Replay tutorial, closes #4
Option in the Settings to replay the tutorial.  Sets it (temporarily) to
20 rounds, but keeps the current deck. Automatically starts a new game
if needed.

--- a/gui/settings.json
+++ b/gui/settings.json
@@ -1,4 +1,7 @@
 [
+    { "type": "title",
+      "title": "Customize Your Game" },
+
     { "type": "slider",
       "title": "Animation Speed",
       "desc": "Delay during an animation sequence, in seconds.",
@@ -17,5 +20,14 @@
       "desc": "Difficulty of your opponent's strategy.",
       "section": "DEFAULT",
       "key": "AI_DIFFICULTY",
-      "options": ["Dumb Luck", "Artificial Intelligence", "Brilliantly Evil"] }
+      "options": ["Dumb Luck", "Artificial Intelligence", "Brilliantly Evil"] },
+
+    { "type": "title",
+      "title": "Play It Again" },
+
+    { "type": "button",
+      "title": "Replay Tutorial",
+      "desc": "Play through the tutorial game again.",
+      "section": "Resets",
+      "key": "REPLAY_TUTORIAL" }
 ]
